# telegram_bot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
postgres/: Dockerfile  init.sql  mock_data.sql
src/telegram_bot/: app.py
src/telegram_bot_tts/: app.py  constants.py  logger.py
src/telegram_bot_tts/components/: commands.py  handlers.py  ults.py
src/telegram_bot_tts/db/: db_manager.py
tests/: test_db.py
tests/telegram_bot_tts/: test_handlers.py
