[project]
name = "telegram-bot-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=21.4",
    "openai>=1.42.0",
    "sqlalchemy>=2.0.32",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy-cockroachdb>=2.0.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "black>=24.8.0",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
]
